<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobyTrans</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_field_required">Field Required</string>
    <string name="error_invalid_input">Invalid Input</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>

</resources>
